cabal-version:      3.0
name:               nebula
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Hubert Kasperek
maintainer:         hubertkasp13@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable nebula
    import:           warnings
    main-is:          Main.hs
    other-modules:    DataTypes, ParseCode, Interpreter
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.0.0,
                      parsec ^>=3.1.15.0
    hs-source-dirs:   app
    default-language: Haskell2010
